# simple_log_bot

./: .gitignore  Cargo.toml  Shuttle.toml
.github/workflows/: cd.yml
src/: main.rs
src/commands/: ping.rs
src/config/: command_loader.rs  mod.rs
src/database/: mod.rs
src/events/: deleted.rs  error.rs  messages.rs  mod.rs  updated.rs
src/handlers/: anti_spam.rs  mod.rs
