[package]
name = "simple_log_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise.git", branch= "current" }
tokio = "1.28.1"
serenity = "0.12.0"
serde = "1.0.164"
surrealdb = { version = "1.4.2", features = ["kv-mem", "rustls"], default-features = false }
anyhow = "1.0.68"
shuttle-runtime= "0.45.0"
shuttle-serenity = "0.45.0" # Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
tracing = "0.1.37"
chrono = "0.4.31"
once_cell = "1.18.0"